--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Home</title>
+	<title>Chi Siamo</title>
 
 	<link rel="icon" href="img/faviconwire.png" />
 
@@ -50,33 +50,40 @@
 
 		</header>
 
+		
 		<!-- NAVBAR -->
 
-		<!-- HERO -->
 
-		<div class="grid hero">
-			<div class="col-50 hero__text pl-0">
-				<h3 class="mb-1"><span>Wire</span> Impianti elettrici</h3>
-				<h1 class="text-1">Realizziamo impianti ellettrici a Roma per abitazioni e locali pubblici</h1>
-				<p class="line-height">Offriamo servizi su misura, realizzati da esperti del settore, per garantire sicurezza e qualità in ogni progetto.
-				</p>
-				<a href="lavori.html" class="button">Scopri di Più</a>
-			</div>
+		<!-- BANNER -->
 
-			<div class="col-50 hero__img">
-				<img class="img-res rounder" src="/img/cover.jpg" alt="">
-				
+		<div class="banner--page">
+			<div class="overlay--page"></div>
+			<div class="banner__text">
+				<p class="text-2"><span>Chi siamo</span></p>
 			</div>
 		</div>
 
-		<!-- HERO -->
+		<!-- BANNER -->
 
-		
+
+		<!-- MEDIA TEXT -->
+
+		<div class="grid spacer-t">
+			<div class="col-50 pt-2">
+				<h2 class="text-1"><span>Wire</span> Impianti elettrici Roma</h2>
+				<p class="m-3 line-height">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate consequatur voluptas nostrum ullam optio praesentium voluptate voluptatum accusamus? Voluptatibus, earum!</p>
+				<p class="m-3 line-height">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas, recusandae? Harum illo odit temporibus amet deleniti. Soluta debitis vel magnam ipsum repellat suscipit repudiandae, repellendus fugit quidem cum quos qui.</p>
+				</p>
+			</div>
+			<div class="col-50">
+				<img class="img-res rounder" src="/img/cover.jpg" alt="">
+			</div>
+
+		</div>
+
 		<!-- ACCORDION -->
 
-		<h2 id="accordion" class="text-center pt-4 spacer-t text-1">I servizi che offriamo sono</h2>
-
-
+		<h2 id="accordion" class="text-center pt-4 spacer-t text-1">Ecco come possiamo aiutarti</h2>
 		<div class="grid">
 		  <div class="col-70">
 				<h3 class="acc-title">Installazione nuovo impianto elettrico
@@ -106,40 +113,21 @@
 
 		<!-- ACCORDION -->
 
-		<!-- BLOCCHI ICONE -->
+		<!-- CTA -->
 
-		<h2 class="text-1 text-center spacer-t mb-1">Affidabili professionali competenti</h2>
-		<div class="grid text-center">
-			<div class="col-33 p-1">
-				<img src="/img/design.svg" width="30px" height="30px" alt="">
-				<h3>Affidabili perchè..</h3>
-				<p>La nostra azienda si distingue per la sua affidabilità senza compromessi. Abbiamo costruito una solida reputazione nel settore degli impianti elettrici a Roma grazie alla nostra capacità di rispettare tempi e budget concordati.</p>
-			</div>
-			<div class="col-33 p-1">
-				<img src="/img/coding.svg" width="30px" height="30px" alt="">
-				<h3>Professionali perchè..</h3>
-				<p>La professionalità è al centro di tutto ciò che facciamo. Il nostro team è composto da esperti qualificati e dedicati, che portano avanti ogni progetto con la massima serietà e impegno. Ci impegniamo costantemente a fornire un servizio professionale e di alta qualità.</p>
-			</div>
-			<div class="col-33 p-1">
-				<img src="/img/contact.svg" width="30px" height="30px" alt="">
-				<h3>Competenti perchè..</h3>
-				<p> La nostra ditta vanta una vasta esperienza e competenza nel campo degli impianti elettrici. Siamo costantemente aggiornati sulle ultime tecnologie e normative del settore, e siamo in grado di offrire soluzioni innovative e all'avanguardia.</p>
-			</div>
-		</div>
-
-		<!-- BLOCCHI ICONE -->
-
-		<!-- BANNER -->
-
-		<div class="banner">
-			<div class="overlay"></div>
-			<div class="banner__text">
-				<h2 class="text-1 mb-2">A Roma impianti elettrici</h2>
+		<div class="cta spacer-t">
+			<!-- <div class="overlay"></div> -->
+			<div class="cta__text">
+				<h2 class="text-1">Affidati alla nostra competenza</h2>
+				<h3 class="text-2 pb-2">Un riferimento a Roma impianti elettrici</h3>
 				<a href="contatti.html" class="button">Contattaci</a>
 			</div>
 		</div>
 
-		<!-- BANNER -->
+		<!-- CTA -->
+
+		
+		
 
 		
 
