fixato collegamenti pagine e bottoni

--- a/contattaci.html
+++ b/contattaci.html
@@ -27,8 +27,8 @@
 
 		<header class="header">
 
-			<a href="index.html"><img class="logo" src="./img/logowire.png" alt="davide mancini web design"
-					title="logo mancini davide" width="150" height="auto">
+			<a href="index.html"><img class="logo" src="./img/logowire.png" alt="impianti elettrici"
+					title="wire impianti elettrici">
 			</a>
 
 			<nav class="menu">
@@ -50,7 +50,6 @@
 
 		</header>
 
-		
 		<!-- NAVBAR -->
 
 
@@ -106,9 +105,9 @@
 				<h4>Menu</h4>
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li><a href="chi-sono.html">Chi Siamo</a></li>
-					<li><a href="lavori.html">Lavori</a></li>
-					<li><a href="contatti.html">Contatti</a></li>
+					<li><a href="chi-siamo.html">Chi Siamo</a></li>
+					<li><a href="#">Servizi</a></li>
+					<li><a href="contattaci.html">Contatti</a></li>
 				</ul>
 			</div>
 			<div class="col-25 pt-1">
