--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
 		<header class="header">
 
-			<a href="index.html"><img class="logo" src="./img/logowire.png" alt="davide mancini web design"
-					title="logo mancini davide" width="150" height="auto">
+			<a href="index.html"><img class="logo" src="./img/logowire.png" alt="impianti elettrici"
+					title="wire impianti elettrici">
 			</a>
 
 			<nav class="menu">
@@ -54,18 +54,17 @@
 
 		<!-- HERO -->
 
-		<div class="grid hero">
+		<div class="grid">
 			<div class="col-50 hero__text pl-0">
 				<h3 class="mb-1"><span>Wire</span> Impianti elettrici</h3>
-				<h1 class="text-1">Realizziamo impianti ellettrici a Roma per abitazioni e locali pubblici</h1>
+				<h1 class="text-0">Realizziamo impianti ellettrici a Roma per abitazioni e locali pubblici</h1>
 				<p class="line-height">Offriamo servizi su misura, realizzati da esperti del settore, per garantire sicurezza e qualità in ogni progetto.
 				</p>
-				<a href="lavori.html" class="button">Scopri di Più</a>
+				<a href="#accordion" class="button">Scopri di Più</a>
 			</div>
 
 			<div class="col-50 hero__img">
 				<img class="img-res rounder" src="/img/cover.jpg" alt="">
-				
 			</div>
 		</div>
 
@@ -74,9 +73,9 @@
 		
 		<!-- ACCORDION -->
 
-		<h2 id="accordion" class="text-center pt-4 spacer-t text-1">I servizi che offriamo sono</h2>
+		<div class="spacer-t"></div>
 
-
+		<h2 id="accordion" class="text-center pt-4 pl-2 pr-2 text-1">I servizi che offriamo sono</h2>
 		<div class="grid">
 		  <div class="col-70">
 				<h3 class="acc-title">Installazione nuovo impianto elettrico
@@ -108,23 +107,27 @@
 
 		<!-- BLOCCHI ICONE -->
 
-		<h2 class="text-1 text-center spacer-t mb-1">Affidabili professionali competenti</h2>
-		<div class="grid text-center">
-			<div class="col-33 p-1">
-				<img src="/img/design.svg" width="30px" height="30px" alt="">
-				<h3>Affidabili perchè..</h3>
-				<p>La nostra azienda si distingue per la sua affidabilità senza compromessi. Abbiamo costruito una solida reputazione nel settore degli impianti elettrici a Roma grazie alla nostra capacità di rispettare tempi e budget concordati.</p>
-			</div>
-			<div class="col-33 p-1">
-				<img src="/img/coding.svg" width="30px" height="30px" alt="">
-				<h3>Professionali perchè..</h3>
-				<p>La professionalità è al centro di tutto ciò che facciamo. Il nostro team è composto da esperti qualificati e dedicati, che portano avanti ogni progetto con la massima serietà e impegno. Ci impegniamo costantemente a fornire un servizio professionale e di alta qualità.</p>
-			</div>
-			<div class="col-33 p-1">
-				<img src="/img/contact.svg" width="30px" height="30px" alt="">
-				<h3>Competenti perchè..</h3>
-				<p> La nostra ditta vanta una vasta esperienza e competenza nel campo degli impianti elettrici. Siamo costantemente aggiornati sulle ultime tecnologie e normative del settore, e siamo in grado di offrire soluzioni innovative e all'avanguardia.</p>
-			</div>
+		<div class="spacer-t"></div>
+
+		<h2 class="text-1 text-center pl-2 pr-2">Affidabili professionali competenti</h2>
+		<div class="grid col-80 text-center">
+			
+				<div class="col-33 p-2">
+					<img src="/img/design.svg" width="30px" height="30px" alt="">
+					<h3>Affidabili perchè..</h3>
+					<p>La nostra azienda si distingue per la sua affidabilità senza compromessi. Abbiamo costruito una solida reputazione nel settore degli impianti elettrici a Roma grazie alla nostra capacità di rispettare tempi e budget concordati.</p>
+				</div>
+				<div class="col-33 p-2">
+					<img src="/img/coding.svg" width="30px" height="30px" alt="">
+					<h3>Professionali perchè..</h3>
+					<p>La professionalità è al centro di tutto ciò che facciamo. Il nostro team è composto da esperti qualificati e dedicati, che portano avanti ogni progetto con la massima serietà e impegno. Ci impegniamo costantemente a fornire un servizio professionale e di alta qualità.</p>
+				</div>
+				<div class="col-33 p-2">
+					<img src="/img/contact.svg" width="30px" height="30px" alt="">
+					<h3>Competenti perchè..</h3>
+					<p> La nostra ditta vanta una vasta esperienza e competenza nel campo degli impianti elettrici. Siamo costantemente aggiornati sulle ultime tecnologie e normative del settore, e siamo in grado di offrire soluzioni innovative e all'avanguardia.</p>
+				</div>
+			
 		</div>
 
 		<!-- BLOCCHI ICONE -->
@@ -135,7 +138,7 @@
 			<div class="overlay"></div>
 			<div class="banner__text">
 				<h2 class="text-1 mb-2">A Roma impianti elettrici</h2>
-				<a href="contatti.html" class="button">Contattaci</a>
+				<a href="contattaci.html" class="button">Contattaci</a>
 			</div>
 		</div>
 
@@ -174,22 +177,8 @@
 			</div>
 		</div> -->
 
-		
-
-
+	
 		<!-- PROGETTI -->
-
-		<!-- CTA -->
-
-		<!-- <div class="cta spacer-t">
-			<div class="overlay"></div>
-			<div class="cta__text">
-				<h2 class="text-1 p-2">Porta la tua presenza online al livello successivo</h2>
-				<a href="contatti.html" class="button">Contattami</a>
-			</div>
-		</div> -->
-
-		<!-- CTA -->
 
 	</div>
 
@@ -205,8 +194,8 @@
 				<h4>Menu</h4>
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li><a href="chi-sono.html">Chi Siamo</a></li>
-					<li><a href="lavori.html">Lavori</a></li>
+					<li><a href="chi-siamo.html">Chi Siamo</a></li>
+					<li><a href="#">Servizi</a></li>
 					<li><a href="contatti.html">Contatti</a></li>
 				</ul>
 			</div>
