--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -27,8 +27,8 @@
 
 		<header class="header">
 
-			<a href="index.html"><img class="logo" src="./img/logowire.png" alt="davide mancini web design"
-					title="logo mancini davide" width="150" height="auto">
+			<a href="index.html"><img class="logo" src="./img/logowire.png" alt="impianti elettrici"
+					title="wire impianti elettrici">
 			</a>
 
 			<nav class="menu">
@@ -50,7 +50,6 @@
 
 		</header>
 
-		
 		<!-- NAVBAR -->
 
 
@@ -59,7 +58,7 @@
 		<div class="banner--page">
 			<div class="overlay--page"></div>
 			<div class="banner__text">
-				<p class="text-2"><span>Chi siamo</span></p>
+				<p><span class="text-2">Chi siamo</span></p>
 			</div>
 		</div>
 
@@ -69,21 +68,23 @@
 		<!-- MEDIA TEXT -->
 
 		<div class="grid spacer-t">
-			<div class="col-50 pt-2">
+			<div class="col-50 hero__text pt-2 pl-0">
 				<h2 class="text-1"><span>Wire</span> Impianti elettrici Roma</h2>
 				<p class="m-3 line-height">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate consequatur voluptas nostrum ullam optio praesentium voluptate voluptatum accusamus? Voluptatibus, earum!</p>
 				<p class="m-3 line-height">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas, recusandae? Harum illo odit temporibus amet deleniti. Soluta debitis vel magnam ipsum repellat suscipit repudiandae, repellendus fugit quidem cum quos qui.</p>
 				</p>
 			</div>
-			<div class="col-50">
+			<div class="col-50 hero__img">
 				<img class="img-res rounder" src="/img/cover.jpg" alt="">
 			</div>
-
 		</div>
+
 
 		<!-- ACCORDION -->
 
-		<h2 id="accordion" class="text-center pt-4 spacer-t text-1">Ecco come possiamo aiutarti</h2>
+		<div class="spacer-t"></div>
+
+		<h2 id="accordion" class="text-center pt-4 pl-2 pr-2 text-1">I servizi che offriamo sono</h2>
 		<div class="grid">
 		  <div class="col-70">
 				<h3 class="acc-title">Installazione nuovo impianto elettrico
@@ -115,23 +116,17 @@
 
 		<!-- CTA -->
 
-		<div class="cta spacer-t">
-			<!-- <div class="overlay"></div> -->
+		<div class="cta">
 			<div class="cta__text">
 				<h2 class="text-1">Affidati alla nostra competenza</h2>
 				<h3 class="text-2 pb-2">Un riferimento a Roma impianti elettrici</h3>
-				<a href="contatti.html" class="button">Contattaci</a>
+				<a href="contattaci.html" class="button">Contattaci</a>
 			</div>
 		</div>
 
 		<!-- CTA -->
 
 		
-		
-
-		
-
-
 		<!-- PROGETTI -->
 
 		<!-- <h2 class="text-2 text-center spacer-t">I servizi che offriamo sono</h2>
@@ -162,22 +157,7 @@
 			</div>
 		</div> -->
 
-		
-
-
 		<!-- PROGETTI -->
-
-		<!-- CTA -->
-
-		<!-- <div class="cta spacer-t">
-			<div class="overlay"></div>
-			<div class="cta__text">
-				<h2 class="text-1 p-2">Porta la tua presenza online al livello successivo</h2>
-				<a href="contatti.html" class="button">Contattami</a>
-			</div>
-		</div> -->
-
-		<!-- CTA -->
 
 	</div>
 
@@ -194,8 +174,8 @@
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li><a href="chi-sono.html">Chi Siamo</a></li>
-					<li><a href="lavori.html">Lavori</a></li>
-					<li><a href="contatti.html">Contatti</a></li>
+					<li><a href="#">Servizi</a></li>
+					<li><a href="contattaci.html">Contatti</a></li>
 				</ul>
 			</div>
 			<div class="col-25 pt-1">
